--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     </div>
     </head>
-    <body background="https://img1.cgtrader.com/items/258985/5e5a009f01/large/the-dark-armor-bust-3d-model-stl.png">
+    <body background="#E6E6FA">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="p5.min.js"></script>
