--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     </title>
     <div align = "center">
        <h2><font color="red">P5 3D</font></h2>
-
-
+    </div>
+    <div>
+        <h2><font color="red">The object can be moved around by pressing and holding the mouse and dragging it around</font></h2>
     </div>
     </head>
-    <body background="#E6E6FA">
+    <body bgcolor="#E6E6FA">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
-    <script src="p5.min.js"></script>
-
+    <script src="../p5.min.js"></script>
+    <script src="../addons/p5.dom.min.js"></script>
+    <script src="../addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
     </body>
 </html>
